--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "worker":"node index.js",
     "start":"node index.js ",
     "start-dev":"nodemon index.js",
-    "test":"echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "",
   "license": "ISC",
