--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "worker":"node index.js",
-    "start":"node index.js ",
-    "start-dev":"nodemon index.js",
+    "worker": "node index.js",
+    "start": "node index.js ",
+    "start-dev": "nodemon index.js",
     "test": "node test.js"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "stripe": "^9.4.0"
   }
 }
